# sapphire

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: reviewer.md
.devcontainer/: .env.example  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release-build.yml
crates/sapphire-compiler/: Cargo.toml
crates/sapphire-compiler/examples/: codegen_dump.rs  lex_dump.rs  parse_dump.rs  resolve_dump.rs  typecheck_dump.rs
crates/sapphire-compiler/src/: analyze.rs  error.rs  lib.rs
crates/sapphire-compiler/src/codegen/: decl.rs  emit.rs  expr.rs  mod.rs  pattern.rs  prelude.rb.tpl  prelude.rs  runtime.rs  tests.rs
crates/sapphire-compiler/src/layout/: error.rs  mod.rs  tests.rs
crates/sapphire-compiler/src/lexer/: error.rs  mod.rs  tests.rs  token.rs
crates/sapphire-compiler/src/parser/: error.rs  mod.rs  tests.rs
crates/sapphire-compiler/src/resolver/: env.rs  error.rs  imports.rs  mod.rs  prelude.rs  scope.rs  tests.rs
crates/sapphire-compiler/src/typeck/: classes.rs  env.rs  error.rs  infer.rs  mod.rs  tests.rs  ty.rs  unify.rs
crates/sapphire-compiler/tests/: cli_smoke.rs  codegen_m9.rs  codegen_snapshot.rs
crates/sapphire-core/: Cargo.toml
crates/sapphire-lsp/: Cargo.toml
crates/sapphire-lsp/src/: completion.rs  definition.rs  diagnostics.rs  edit.rs  hover.rs  lib.rs  main.rs  server.rs
crates/sapphire-lsp/tests/: example_completion.rs  example_diagnostics.rs  example_goto.rs  example_hover.rs
docs/: open-questions.md  project-status.md  roadmap.md
docs/impl/: 01-overview.md  02-criteria.md  03-candidates.md  04-matrix.md  05-decision.md  06-implementation-roadmap.md  06-scaffolding.md  07-lsp-stack.md  08-runtime-layout.md  09-lexer.md  10-lsp-scaffold.md  11-runtime-adt-marshalling.md  12-packaging.md  13-parser.md  14-ruby-monad-runtime.md  15-resolver.md  16-runtime-threaded-loading.md  17-lsp-diagnostics.md  18-typecheck-hm.md  19-typecheck-adt.md  20-typecheck-classes.md  21-lsp-incremental-sync.md  22-lsp-goto-definition.md  23-vscode-extension-polish.md  24-codegen-expr.md  25-codegen-adt-record.md  26-codegen-effect-monad.md  27-cli.md  28-lsp-hover.md  29-ci-cross-compile.md  30-first-release-audit.md  31-lsp-completion.md  32-release-process.md
docs/release/: RELEASE_NOTES_0.1.0.md
docs/spec/: 01-core-expressions.md  02-lexical-syntax.md  03-data-types.md  04-records.md  05-operators-and-numbers.md  06-pattern-matching.md  07-type-classes.md  08-modules.md  09-prelude.md  10-ruby-interop.md  11-ruby-monad.md  12-example-programs.md  13-spec-freeze-review.md
docs/tutorial/: 01-はじめに.md  02-式と関数.md  03-データ型とパターンマッチ.md  04-リストとレコード.md  05-モジュールと型クラス.md  06-Ruby-と対話する.md  07-発展篇-型クラスとHKT.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: README.md
examples/codegen-snapshot/: 01-hello-ruby-main.rb  02-parse-numbers-number_sum.rb  03-students-records-students.rb  04-fetch-summarise-fetch.rb  04-fetch-summarise-http.rb  README.md  prelude.rb
examples/lexer-snapshot/: README.md  hello.sp  hello.tokens.txt
examples/lsp-completion/: README.md  (+1 more)
runtime/: .gitignore  Gemfile  README.md  sapphire-runtime.gemspec
(+83 files in other folders)
