[workspace]
resolver = "3"
members = [
    "crates/sapphire-core",
    "crates/sapphire-compiler",
    "crates/sapphire-lsp",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/meriy100/sapphire"
authors = ["meriy100 <kouta@meriy100.com>"]
